move the read of the properties to a method with a unit test

--- a/src/test/resources/unittest.properties
+++ b/src/test/resources/unittest.properties
@@ -6,6 +6,12 @@
 sample.data.file=classpath:sample-data.json
 sample.data.name=schmoopy
 sample.data.age=89
+unittest.sample.data.extraProperty1=extra1
+unittest.sample.data.extraProperty2=extra2
+unittest.sample.data.extraProperty3=extra3
+unittest.sample.data.extraProperty4=extra4
+unittest.sample.data.extraProperty5=extra5
+unittest.sample.data.extraProperty6=extra6
 
 unittest.sample.data.file=classpath:unittest-data.json
 unittest.sample.expected.file=classpath:unittest-expected.json
